Fixed text overflow.

--- a/src/assets/styles/treeMap.scss
+++ b/src/assets/styles/treeMap.scss
@@ -291,7 +291,8 @@
     line-height: 1.15em;
     color: #000;
     width: 100%;
-    max-height: 2.3em;
+    height: 2.3em;
+    max-height: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
 
